--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                       <i class="fa-solid fa-graduation-cap text-dark fs-5"></i>
                     </div>
                     <div class="title ms-4">
-                      <h5 class="fs-4">The University of Manchester</h5>
+                      <h5 class="fs-4">The University of Manchester-Manchester</h5>
                       <h6>Master's in Computer Software Engineering</h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <p>October 2024 – December 2026</p>
                     </div>
                   </li>
                   <li class="timeline-item">
@@ -60,9 +60,9 @@
                       <i class="fa-solid fa-graduation-cap text-dark fs-5"></i>
                     </div>
                     <div class="title ms-4">
-                      <h5 class="fs-4">The University of Manchester</h5>
+                      <h5 class="fs-4">The University of Manchester-Manchester</h5>
                       <h6>Master's in Computer Software Engineering</h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <p>October 2024 – December 2026</p>
                     </div>
                   </li>
                   <li class="timeline-item">
@@ -70,9 +70,9 @@
                       <i class="fa-solid fa-graduation-cap text-dark fs-5"></i>
                     </div>
                     <div class="title ms-4 ">
-                      <h5 class="fs-4">The University of Manchester</h5>
+                      <h5 class="fs-4">The University of Manchester-Manchester</h5>
                       <h6>Master's in Computer Software Engineering</h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <p>October 2024 – December 2026</p>
                     </div>
                   </li>
                 </ul>
@@ -104,9 +104,9 @@
                       <i class="fa-solid fa-briefcase fs-5"></i>
                     </div>
                     <div class="title ms-4">
-                      <h5 class="fs-4">The University of Manchester</h5>
-                      <h6>Master's in Computer Software Engineering</h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <h5 class="fs-4">Senior Software Engineering</h5>
+                      <h6> Google - American</h6>
+                      <p>October 2024 – December 2026</p>
                       <p class="fw-normal pt-2">
                         Work in Google is one of the beautiful experience I can
                         do in my entire lift. There are a lot of interesting
@@ -120,9 +120,9 @@
                       <i class="fa-solid fa-briefcase fs-5"></i>
                     </div>
                     <div class="title ms-4">
-                      <h5 class="fs-4">The University of Manchester</h5>
-                      <h6>Master's in Computer Software Engineering</h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <h5 class="fs-4">Senior Software Engineering</h5>
+                      <h6> Google - American</h6>
+                      <p>October 2024 – December 2026</p>
                       <p class="fw-normal pt-2">
                         Work in Google is one of the beautiful experience I can
                         do in my entire lift. There are a lot of interesting
@@ -136,11 +136,11 @@
                       <i class="fa-solid fa-briefcase fs-5"></i>
                     </div>
                     <div class="title ms-4">
-                      <h5 class="fs-4">The University of Manchester</h5>
+                      <h5 class="fs-4">Senior Software Engineering</h5>
                       <h6 class="">
-                        Master's in Computer Software Engineering
+                        Google - American
                       </h6>
-                      <p>Oct 2024 – Dec 2026</p>
+                      <p>October 2024 – December 2026</p>
                       <p class="fw-normal pt-2">
                         Work in Google is one of the beautiful experience I can
                         do in my entire lift. There are a lot of interesting
